--- a/scss/components/_production.scss
+++ b/scss/components/_production.scss
@@ -150,6 +150,10 @@
         column-gap: 60px;
         row-gap: 10px;
         flex-wrap: wrap;
+@include ab.screen(lg) {
+    column-gap: 20px;
+ }
+
     }
 
     &__tab {
@@ -158,6 +162,16 @@
         font-size: 2rem;
         font-weight: 500;
         line-height: 1.45;
+        user-select: none;
+        cursor: pointer;
+
+        &-title {
+            margin-top: 30px;
+            margin-bottom: 30px;
+            color: var(--text-color);
+            font-size: 2rem;
+            font-weight: 500;
+        }
 
         &.active {
             color: var(--production-tabs-active-text);
@@ -173,5 +187,9 @@
         &.active {
             display: block;
         }
+    }
+
+    &__tab-section {
+        margin-top: 30px;
     }
 }
