--- a/scss/components/_text-content.scss
+++ b/scss/components/_text-content.scss
@@ -1,3 +1,5 @@
+@use "../abstracts" as ab;
+
 .text-content {
     font-size: 1.6rem;
     line-height: 1.6;
@@ -55,7 +57,10 @@
         display: block;
         margin-left: auto;
         margin-right: auto;
-        max-width: 90%;
+        max-width: 30%;
+        @include ab.screen(md) {
+            max-width: 80% ;
+        }
     }
 
     img + em {
