--- a/scss/components/_cm-checkbox.scss
+++ b/scss/components/_cm-checkbox.scss
@@ -5,6 +5,8 @@
     display: flex;
     align-items: center;
     flex-shrink: 0;
+    gap: 10px;
+    color: var(--text-color);
     &__box {
         $size: 20px;
         width: $size;
