--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -135,12 +135,11 @@ html.dark {
     --filter-B9BABE: brightness(0) saturate(100%) invert(74%) sepia(1%)
         saturate(1949%) hue-rotate(206deg) brightness(91%) contrast(67%);
     --EDEDF6-to-292E39: #292e39;
-    --FAFAFDto-171C28: #171C28;
-    --white-to-292E39 : #292E39 ;
-    --1A162E-to-D2D1D6: #D2D1D6;
+    --FAFAFDto-171C28: #171c28;
+    --white-to-292E39: #292e39;
+    --1A162E-to-D2D1D6: #d2d1d6;
     --ededf6-to-9e9da8: #9e9da8;
 
-    --FAFAFD-to-292E39 :#292E39 ;
-
-
+    --FAFAFD-to-292E39: #292e39;
+    --modal-shadow: 0 3px 10px 5px rgba(47, 47, 47, 0.1);
 }
