--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -155,4 +155,6 @@ html {
     --ededf6-to-9e9da8: #ededf6;
 
     --FAFAFD-to-292E39: #fafafd;
+
+    --modal-shadow: 0 3px 10px 5px rgba(66, 65, 65, 0.1);
 }
