--- a/scss/components/_cm-checkbox.scss
+++ b/scss/components/_cm-checkbox.scss
@@ -8,6 +8,7 @@
     gap: 10px;
     color: var(--text-color);
     &__box {
+        flex-shrink: 0 ;
         $size: 20px;
         width: $size;
         height: $size;
