--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -31,26 +31,52 @@
     }
 
     &__form {
+        padding-right: 15px;
         margin: 20px 0;
         display: flex;
         flex-direction: column;
-        gap: 25px;
+        gap: 30px;
+        max-height: calc(100vh - 120px);
+        overflow-y: auto;
 
-        //
-        .f-wrap-none {
-            gap: 30px;
+        &::-webkit-scrollbar {
+            width: 5px;
+        }
+        &::-webkit-scrollbar-track {
+            background: transparent;
+            border-radius: 8px;
+        }
+        &::-webkit-scrollbar-thumb {
+            background: var(--drop-menu-separator--thumb);
+            border-radius: 8px;
         }
 
-        input {
-            color: var(--text-color);
-            display: block;
-            width: 100%;
-            flex-grow: 1;
-            font-weight: 500;
+        //
+        > .f-wrap-none {
+            gap: 30px;
+
+            @include ab.screen(sm) {
+                flex-wrap: wrap;
+                gap: 20px;
+            }
+        }
+    }
+
+    &__label {
+        display: block;
+        flex-grow: 1;
+        color: var(--text-color);
+        font-weight: 500;
+        //
+        &-text {
+            padding-bottom: 10px;
         }
     }
 
     &__input-line {
+        color: var(--text-color);
+        width: 100%;
+        font-weight: 500;
         padding-left: 10px;
         padding-bottom: 10px;
         border-bottom: 1px solid var(--filter__option-item-text);
@@ -58,15 +84,18 @@
         &:focus {
             border-color: rgb(255, 183, 0);
         }
+        &:-webkit-autofill {
+            -webkit-box-shadow: 0 0 0 1000px var(--header-bg-color) inset !important;
+            -webkit-text-fill-color: var(--text-color);
+        }
     }
 
     &__input-block {
-        text-align: start;
         height: 100px;
-        padding: 20px;
+        padding: 10px 20px;
         border-radius: 10px;
         border: 1px solid var(--filter__option-item-text);
-
+        font-weight: 500;
         textarea {
             resize: none;
             width: 100%;
@@ -75,6 +104,88 @@
 
         &:focus-within {
             border-color: rgb(255, 183, 0);
+        }
+    }
+
+    &__option {
+        &:focus-within &-card {
+            display: flex;
+        }
+        &-card:hover {
+            display: flex;
+        }
+
+        //
+        &-card {
+            display: none;
+            flex-direction: column;
+            padding: 15px;
+            border-radius: 10px;
+            position: absolute;
+            inset: 30px 30px 30px auto;
+            background-color: var(--header-bg-color);
+            box-shadow: var(--modal-shadow);
+            @include ab.screen(sm) {
+                left: 30px;
+            }
+        }
+
+        &-header {
+            display: none;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 20px;
+
+            @include ab.screen(sm) {
+                display: flex;
+            }
+            //
+            img {
+                height: 20px;
+                width: 20px;
+                object-fit: contain;
+                opacity: 0.7;
+            }
+        }
+
+        &-search {
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            padding-bottom: 15px;
+            margin-bottom: 10px;
+            border-bottom: 1px solid var(--filter__option-item-text);
+
+            @include ab.screen(sm) {
+                flex-direction: row-reverse;
+            }
+            //
+            input {
+                flex-grow: 1;
+            }
+        }
+
+        &-list {
+            margin-top: 10px;
+            flex-grow: 1;
+            overflow-y: auto;
+            overscroll-behavior: contain;
+
+            //
+            &::-webkit-scrollbar {
+                width: 5px;
+            }
+            &::-webkit-scrollbar-track {
+                background: transparent;
+                border-radius: 8px;
+            }
+            &::-webkit-scrollbar-thumb {
+                background: var(--drop-menu-separator--thumb);
+                border-radius: 8px;
+            }
+        }
+        &-item {
+            padding: 12px;
         }
     }
 
@@ -96,5 +207,10 @@
     &.active {
         visibility: visible;
         opacity: 10;
+    }
+
+    &__checkbox {
+        width: 100%;
+        //
     }
 }
