--- a/scss/components/_cm-checkbox.scss
+++ b/scss/components/_cm-checkbox.scss
@@ -7,6 +7,7 @@
     flex-shrink: 0;
     gap: 10px;
     color: var(--text-color);
+    user-select: none;
     &__box {
         flex-shrink: 0 ;
         $size: 20px;
