--- a/scss/components/_user-nav.scss
+++ b/scss/components/_user-nav.scss
@@ -59,7 +59,7 @@
     &__list {
         display: flex;
         flex-direction: column;
-        gap: 12px;
+        // gap: 12px;
 
         color: var(--user-nav-list-text);
 
@@ -77,7 +77,12 @@
         gap: 10px;
         font-size: 1.5rem;
         line-height: 1.46;
-
+        padding: 6px 0;
+        transition: 0.5s;
+        &:hover {
+            color: var(--drop-menu-hover-text);
+            translate: 5px;
+        }
         &-icon {
             width: 20px;
             height: 20px;
@@ -86,11 +91,6 @@
         }
         &-label {
             flex: 1;
-            transition: 0.5s;
-            &:hover {
-                color: var(--drop-menu-hover-text);
-                translate: 5px;
-            }
         }
     }
 }
